[metadata]
name = ghasedak_utility
version = 0.2.1
description = A Django app to conduct Web-based polls.
long_description = file: README.rst
author = Ashkan Khademian
author_email = ashkan.khd.q@gmail.com
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    nameko == 2.14.1
    django-nameko == 0.8.2
    Django >= 3.2
